@@ -64,7 +64,7 @@ def TRACE(msg, *args):
 class Globals:
     undoMan = None
     conf = None
-    useMeta = True              # use meta-components
+    useMeta = False              # use meta-components
     _CFuncPtr = None             # _CFuncPtr from ctypes
     
     def _makeFonts(self):
